# simforge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml  simforge.yaml.example
.github/workflows/: ci.yml  release.yml
data/: materials.yaml
examples/: simforge.yaml
include/simforge/: version.h.in
include/simforge/adapters/: adapter.h  exporters.h  mesh_writer.h  primitive_fitter.h
include/simforge/core/: articulation.h  hashing.h  material_library.h  types.h
include/simforge/pipeline/: articulation_stage.h  builtin_stages.h  pipeline.h  stage.h
include/simforge/validators/: articulation_validators.h  validator.h
python/: CMakeLists.txt  bind_adapters.cpp  bind_articulation.cpp  bind_physics.cpp  bind_pipeline.cpp  bind_types.cpp  bind_types.h  bind_utilities.cpp  bindings.cpp
samples/: LICENSE-THIRD-PARTY
samples/primitives/: cube.stl
samples/robot/: cart_pole.mjcf  cart_pole.urdf
src/: CMakeLists.txt
src/adapters/: adapter.cpp  builtin_adapters.cpp  coacd_adapter.cpp  gltf_exporter.cpp  mesh_writer.cpp  meshopt_adapter.cpp  mjcf_exporter.cpp  mjcf_importer.cpp  primitive_fitter.cpp  urdf_exporter.cpp  urdf_importer.cpp  usda_exporter.cpp
src/cli/: main.cpp
src/core/: articulation.cpp  hashing.cpp  material_library.cpp  types.cpp
src/pipeline/: articulation_stage.cpp  builtin_stages.cpp  pipeline.cpp  stage.cpp
src/validators/: articulation_validators.cpp  validator.cpp
tests/: CMakeLists.txt  test_adapters.cpp  test_articulated_importers.cpp  test_articulation.cpp  test_articulation_validators.cpp  test_bindings.py  test_collision_lod.cpp  test_coverage_gaps.cpp  test_exporters.cpp  test_helpers.h  test_incremental.cpp  test_integration.cpp  test_materials.cpp  test_parallel.cpp  test_pipeline.cpp  test_types.cpp  test_validators.cpp
tests/fixtures/: mug.simforge.yaml  simple_arm.urdf  simple_arm.xml
