[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "simforge"
version = "0.1.0"
requires-python = ">=3.9"
description = "Asset pipeline for robotics simulation"
license = {file = "LICENSE"}

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DSIMFORGE_BUILD_PYTHON=ON", "-DSIMFORGE_BUILD_TESTS=OFF"]
wheel.packages = []
